# fastapi-cli

./: .gitignore  README.md  manage.py  pyproject.toml  utils.py
assets/endpoint/: description.txt  function.txt
assets/service/: dependencies.txt  models.txt  sql.txt
assets/service/documentation/: check.md
assets/service/routes/: v1.txt
assets/service/schemas/: requests.txt  responses.txt
server/: README.md  main.py
server/core/: enums.py  models.py  schemas.py  types.py  utils.py
server/core/config/: __init__.py  schemas.py  services.py
server/core/config/environments/: __init__.py  development.py  production.py  staging.py
server/core/config/environments/sources/: __init__.py
server/core/documentation/: openapi.py  schemas.py
server/core/services/health/: routes.py
server/core/services/health/documentation/: health_check.md
server/core/services/health/routes/: v1.py
server/core/services/health/schemas/: responses.py
server/services/health/: routes.py
tests/: test_main.py
tests/test_core/: test_enums.py  test_models.py  test_schemas.py  test_types.py  test_utils.py
tests/test_core/test_config/: test_init.py  test_schemas.py  test_services.py
tests/test_core/test_config/test_environments/: test_development.py  test_init.py  test_production.py  test_staging.py
tests/test_core/test_config/test_environments/test_sources/: test_init.py
tests/test_core/test_documentation/: test_openapi.py  test_schemas.py
tests/test_core/test_services/test_health/: test_schemas.py
tests/test_services/test_health/: test_routes.py
(+1 files in other folders)
