[tool.poetry]
name = "fastapi-cli"
version = "0.1.0"
description = "Build fastapi application with a CLI used for app generation and more."
authors = ["rifatrakib <Rakib.1508@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
aiocache = "^0.12.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
aiosqlite = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
ruff = "^0.5.0"
typer = "^0.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
